# BF2.0

./: .gitignore  README.md  data_43_3cls.pkl  data_43_3cls_test.pkl  data_43_3cls_train.pkl  data_99_3cls_test.pkl  data_99_3cls_train.pkl  data_reg_to_cls.py  data_to_duckdb.py  duckdb_check.py  main.py  pipipickle.py  pyproject.toml  que_push.py  que_push_stop.py  rd.py  requirements-3.10.txt  train.py
