[project]
name = "bf2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "duckdb==1.1.3",
    "joblib==1.5.1",
    "lightgbm>=4.6.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "redis==5.0.4",
    "scikit-learn==1.5.2",
    "scipy==1.16.1",
    "six==1.16.0",
    "threadpoolctl==3.5.0",
    "tzdata==2024.1",
    "xgboost>=3.2.0",
]
